add header video

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 
         <div class="text-group">
 
-          <h2 class="section-title">JAY MO</h2>
+          <!-- <h2 class="section-title">JAY MO</h2> -->
+           <img class="header-title-logo" src="./images/logo/배경제거 J.png">
+           <img class="header-title-logo"  src="./images/logo/배경제거 A.png">
+           <img class="header-title-logo"  src="./images/logo/배경제거 Y.png">
+           <img class="header-title-logo"  src="./images/logo/배경제거 M.png">
+           <img class="header-title-logo"  src="./images/logo/배경제거 O.png">
           <p class="rotating-text"></p>
           <a href="https://drive.google.com/file/d/1IAj2vx4-LJZ1LhDcGEbky8F7fp2TLwOk/view?usp=sharing" download class="orbit-wrapper">
             <div class="orbit-img-box">
@@ -46,7 +51,7 @@
     <section class="video-section">
 
         <div class="video-wrapper">
-          <video class="video-circle" src="videos/clear_satin.mp4" autoplay muted loop playsinline></video>
+          <video class="video-circle" src="videos/intro-video.mp4" autoplay muted loop playsinline></video>
         </div>
         <div class="lines-container">
             <div class="line" style="transform: rotate(0deg);"></div>
@@ -102,13 +107,13 @@
             <div class="project-card">
                 <video
                 class="project-video"
-                src="videos/demo_Fridge_Master_Full.mp4"
+                src="videos/demo_portfolio.mp4"
                 autoplay
                 loop
                 muted
                 playsinline
                 >
-                <source src="videos/demo_Fridge_Master_Full.mp4" type="video/mp4">
+                <source src="videos/demo_portfolio.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
                 <h3 class="project-title">PORTFOLIO WEBSITE</h3>
