--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Jay Mo | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header-video.css">
     <link rel="stylesheet" href="iam.css">
@@ -16,6 +16,7 @@
     <script src="header-video.js" defer></script>
     <script src="iam.js" defer></script>
     <script src="timeline.js" defer></script>
+    <link rel="icon" href="./images/logo/J.png" type="image/png">
 </head>
 <body>
     <!-- Header -->
@@ -26,11 +27,11 @@
         <div class="text-group">
 
           <!-- <h2 class="section-title">JAY MO</h2> -->
-           <img class="header-title-logo" src="./images/logo/배경제거 J.png">
-           <img class="header-title-logo"  src="./images/logo/배경제거 A.png">
-           <img class="header-title-logo"  src="./images/logo/배경제거 Y.png">
-           <img class="header-title-logo"  src="./images/logo/배경제거 M.png">
-           <img class="header-title-logo"  src="./images/logo/배경제거 O.png">
+           <img class="header-title-logo" src="./images/logo/J.png">
+           <img class="header-title-logo"  src="./images/logo/A.png">
+           <img class="header-title-logo"  src="./images/logo/Y.png">
+           <img class="header-title-logo"  src="./images/logo/M.png">
+           <img class="header-title-logo"  src="./images/logo/O.png">
           <p class="rotating-text"></p>
           <a href="https://drive.google.com/file/d/1IAj2vx4-LJZ1LhDcGEbky8F7fp2TLwOk/view?usp=sharing" download class="orbit-wrapper">
             <div class="orbit-img-box">
